Added code for Q Learning Agent

--- a/lab1/Lab 1 - Problem 3.ipynb
+++ b/lab1/Lab 1 - Problem 3.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,10 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# you can close the visualization GUI with the following method \n",
@@ -142,14 +140,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.action_space.n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Q-values for state (0, 0): [ 0.  0.  0.  0.] which is a list of Q values for each action\n",
+      "Q-values for state (0, 0): [0. 0. 0. 0.] which is a list of Q values for each action\n",
       "As such, the Q value of taking action 3 in state (1,2), i.e. Q((1,2), 3), can be accessed by q_vals[(1,2)][3]: 0.0\n"
      ]
     }
@@ -159,7 +177,7 @@
     "import random\n",
     "\n",
     "# dictionary that maps from state, s, to a numpy array of Q values [Q(s, a_1), Q(s, a_2) ... Q(s, a_n)]\n",
-    "#   and everything is initialized to 0.\n",
+    "# and everything is initialized to 0.\n",
     "q_vals = defaultdict(lambda: np.array([0. for _ in range(env.action_space.n)]))\n",
     "\n",
     "print(\"Q-values for state (0, 0): %s\" % q_vals[(0, 0)], \"which is a list of Q values for each action\")\n",
@@ -168,9 +186,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#int(random.uniform(0, len(q_vals[(0,0)])))\n",
+    "np.argmax(q_vals[(0,0)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test1 passed\n",
+      "Test2 passed\n"
+     ]
+    }
+   ],
    "source": [
     "def eps_greedy(q_vals, eps, state):\n",
     "    \"\"\"\n",
@@ -185,6 +233,16 @@
     "    #   number of actions can be read off from len(q_vals[state])\n",
     "    import random\n",
     "    # YOUR CODE HERE\n",
+    "    prob = random.random()\n",
+    "    \n",
+    "    if prob <= eps:\n",
+    "        # create random action\n",
+    "        action = int(random.uniform(0, len(q_vals[state])))\n",
+    "    else:\n",
+    "        # choose argmax from q_vals\n",
+    "        action = np.argmax(q_vals[state])\n",
+    "    \n",
+    "    return action\n",
     "\n",
     "# test 1\n",
     "dummy_q = defaultdict(lambda: np.array([0. for _ in range(env.action_space.n)]))\n",
@@ -233,11 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed\n"
+     ]
+    }
+   ],
    "source": [
     "def q_learning_update(gamma, alpha, q_vals, cur_state, action, next_state, reward):\n",
     "    \"\"\"\n",
@@ -253,6 +317,10 @@
     "    Performs in-place update of q_vals table to implement one step of Q-learning\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
+    "    maxQ = np.max(q_vals[next_state])\n",
+    "    target = reward + gamma * maxQ\n",
+    "    \n",
+    "    q_vals[cur_state][action] = (1 - alpha) * q_vals[cur_state][action] + alpha * target\n",
     "\n",
     "# testing your q_learning_update implementation\n",
     "dummy_q = q_vals.copy()\n",
@@ -288,7 +356,6 @@
    ],
    "source": [
     "# now with the main components tested, we can put everything together to create a complete q learning agent\n",
-    "\n",
     "env = CrawlingRobotEnv() \n",
     "q_vals = defaultdict(lambda: np.array([0. for _ in range(env.action_space.n)]))\n",
     "gamma = 0.9\n",
